{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "HeadsetPlayer",
            "id": "266f9223-e0b5-401b-a2d3-81c1bae0c898",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "f8f7e9bd-3f0c-4d91-bdc8-f526c4cc3137",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9669a835-963c-456c-ab3d-b71cd342e6e6",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DesktopPlayer",
            "id": "f5944422-83a0-4e00-8707-60883b7a3d1e",
            "actions": [
                {
                    "name": "move",
                    "type": "PassThrough",
                    "id": "da6214c5-d28a-4861-9ad1-8769933f9cfc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8b479852-4357-4783-a72f-281ccede3b39",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "19f4f662-edbf-48fc-b781-d07a967269bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "738622d5-69f6-4b0a-8f85-92e0cc4c9d51",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "08403b89-f198-439a-b92e-132a5796511f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "53a30ba3-9f71-4b16-a8f9-aef324b2fb58",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}